# genlang-mvp

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: hello.gs  hello_fast_pt.gs  lora_demo.gs  tiny.csv
genlang/: cli.py  grammar.lark  runtime.py
genlang.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
